--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
 
-    color:#333;
+    color:#1e1f24;
     text-align: left;
     font-family: "Arial";
     font-size: 16px;
@@ -28,6 +28,11 @@ body
 
 }
 
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline{
     font-weight: normal;
     font-size: 0.8em; 
@@ -37,4 +42,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
